# hovergames

./: README.md
antenna-tracker/: CMakeLists.txt  README.md  prj.conf  west.yml
antenna-tracker/boards/: blackpill_f401ce.overlay
antenna-tracker/calib/: README.md  hardiron.py  softiron.py  vis.py
antenna-tracker/dts/bindings/: pwm-servos.yaml
antenna-tracker/include/: attctrl.h  board.h  estimator.h  imu.h  mag.h  mavlink.h  pwmctrl.h  quaternion.h  threads.h  usb.h  util.h
antenna-tracker/src/: attctrl.c  estimator.c  imu.c  mag.c  main.c  mavlink.c  pwmctrl.c  quaternion.c  usb.c  util.c
drone/navq/: record_video.py
drone/pi/: mavsdk-proximity.py  playsound.py  server.py
drone/streamer/: receive_rtp.sh  stream_rtp_navq.sh  stream_srt_jetson.sh  stream_srt_nohwenc.sh
drone/streamer/old/: main.py  main2.py  main_sw.py
server/: detect.py  heatmap.py  main.py
